ADAPT-000 Fixup! Codeclimate spacing for Horizontal Card with Small Circle

--- a/src/scss/components/card/horizontal-card/_horizontal-card--small-circle.scss
+++ b/src/scss/components/card/horizontal-card/_horizontal-card--small-circle.scss
@@ -23,7 +23,8 @@
             @include modular-spacing('margin-bottom', -1);
           }
 
-          .su-card__link, .su-card__button {
+          .su-card__link,
+          .su-card__button {
             // @TODO: After we add a template around the main text paragraphs, before the link, redo this to be margin-bottom on that new wrapper
             @include modular-spacing('margin-top', 3);
           }
